Big chunks of BiomeSettings complete, but lacking Template system integration